--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,20 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from datetime import date\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.preprocessing import label_binarize\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +200,7 @@
        "[513115 rows x 6 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +376,7 @@
        "9  GENERAL_MERCHANDISE  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,6 +1728,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "inflows = pd.read_parquet(\"../data/ucsd-inflows.pqt\")\n",
+    "outflows = pd.read_parquet(\"../data/ucsd-outflows.pqt\")\n",
     "import re\n",
     "\n",
     "def clean_text(data):\n",
@@ -1732,7 +1741,7 @@
     "    pattern1 = r'\\b(?:CA\\s+)?(?:0?[1-9]|1[0-2])[/-](?:0?[1-9]|[12]\\d|3[01])(?:/\\d{2,4})?\\b'\n",
     "\n",
     "    # pattern2 handles unnecessary X's\n",
-    "    pattern2 = r'(?<!#)X+|#X+'\n",
+    "    pattern2 = r'(?<!#)XX+|#XX+'\n",
     "\n",
     "    # Handles unnecessary punctuation\n",
     "    pattern3 = r\"[^a-zA-Z0-9\\s./]\"\n",
@@ -1751,7 +1760,9 @@
     "    df['memo'] = df['memo'].apply(lambda x: \" \".join(x.split()).strip())\n",
     "    df['memo'] = df['memo'].apply(lambda x: re.sub(pattern4, '', x))\n",
     "    df[\"memo\"] = df[\"memo\"].apply(lambda x: re.sub(pattern6, '', re.sub(pattern5, '', x.lower())))\n",
-    "    return df"
+    "    return df\n",
+    "not_matching = outflows[outflows['memo'] != outflows['category']]\n",
+    "cleaned_not_matching = clean_text(not_matching)"
    ]
   },
   {
@@ -1760,12 +1771,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df = clean_text(important_data)"
+    "w_cleaned_outflows = cleaned_not_matching.copy()\n",
+    "#w_cleaned_outflows = cleaned_outflows.copy()\n",
+    "\n",
+    "def add_text(memo, added_tokens):\n",
+    "    memo += ''.join(added_tokens)\n",
+    "    return memo\n",
+    "\n",
+    "def whole_dollar_amount(amount):\n",
+    "    if amount % 1 == 0:\n",
+    "        return ' <W_D>'\n",
+    "    return ''\n",
+    "\n",
+    "def day(date):\n",
+    "    return f\" <D_{date.day}>\"\n",
+    "\n",
+    "def month(date):\n",
+    "    return f\" <M_{date.month}>\"\n",
+    "\n",
+    "\n",
+    "w_cleaned_outflows['memo'] = w_cleaned_outflows.apply(\n",
+    "    lambda row: add_text(row['memo'], \n",
+    "                         [whole_dollar_amount(row['amount']), \n",
+    "                          day(row['posted_date']),\n",
+    "                         month(row['posted_date'])]), axis=1\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df = clean_text(important_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +2017,7 @@
        "20   28.00  2022-12-23  GENERAL_MERCHANDISE  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,71 +2028,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_features=500) #unigrams, capped at 500 \n",
+    "\n",
+    "# tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])\n",
+    "\n",
+    "# feature_names = tfidf_vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# tfidf_df = pd.DataFrame(tfidf_features.toarray(), columns=feature_names)\n",
+    "\n",
+    "# print(\"TF-IDF Matrix shape:\", tfidf_features.shape)\n",
+    "\n",
+    "# print(tfidf_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF Matrix shape: (1306452, 500)\n",
-      "          00   10  1200   14        15   16  185  1infiniteloop   20   21  \\\n",
-      "0        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "1        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "2        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "3        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "4        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "...      ...  ...   ...  ...       ...  ...  ...            ...  ...  ...   \n",
-      "1306447  0.0  0.0   0.0  0.0  0.448528  0.0  0.0            0.0  0.0  0.0   \n",
-      "1306448  0.0  0.0   0.0  0.0  0.345006  0.0  0.0            0.0  0.0  0.0   \n",
-      "1306449  0.0  0.0   0.0  0.0  0.411850  0.0  0.0            0.0  0.0  0.0   \n",
-      "1306450  0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
-      "1306451  0.0  0.0   0.0  0.0  0.484216  0.0  0.0            0.0  0.0  0.0   \n",
-      "\n",
-      "         ...     wings  with  withdrawal   wm  woodland  worth  www  york  \\\n",
-      "0        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "1        ...  0.582319   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "2        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "3        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "4        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "...      ...       ...   ...         ...  ...       ...    ...  ...   ...   \n",
-      "1306447  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "1306448  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "1306449  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "1306450  ...  0.000000   0.0    0.212867  0.0       0.0    0.0  0.0   0.0   \n",
-      "1306451  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
-      "\n",
-      "         youtube  zip  \n",
-      "0            0.0  0.0  \n",
-      "1            0.0  0.0  \n",
-      "2            0.0  0.0  \n",
-      "3            0.0  0.0  \n",
-      "4            0.0  0.0  \n",
-      "...          ...  ...  \n",
-      "1306447      0.0  0.0  \n",
-      "1306448      0.0  0.0  \n",
-      "1306449      0.0  0.0  \n",
-      "1306450      0.0  0.0  \n",
-      "1306451      0.0  0.0  \n",
-      "\n",
-      "[1306452 rows x 500 columns]\n"
+      "Vectorization complete\n",
+      "Naive Bayes model trained\n",
+      "-----------------------------------------------------------------\n",
+      "Overall Accuracy: 0.9070882655736324\n",
+      "-----------------------------------------------------------------\n",
+      "ROC AUC for category 'FOOD_AND_BEVERAGES': 0.5745\n",
+      "ROC AUC for category 'GENERAL_MERCHANDISE': 0.2069\n",
+      "ROC AUC for category 'GROCERIES': 0.2935\n",
+      "ROC AUC for category 'PETS': 0.5547\n",
+      "ROC AUC for category 'TRAVEL': 0.4888\n",
+      "ROC AUC for category 'MORTGAGE': 0.6939\n",
+      "ROC AUC for category 'OVERDRAFT': 0.2140\n",
+      "ROC AUC for category 'EDUCATION': 0.7751\n",
+      "ROC AUC for category 'RENT': 0.7835\n",
+      "-----------------------------------------------------------------\n",
+      "Accuracy for category 'OVERDRAFT': 0.9999\n",
+      "Accuracy for category 'GROCERIES': 0.9774\n",
+      "Accuracy for category 'TRAVEL': 0.9898\n",
+      "Accuracy for category 'RENT': 0.9984\n",
+      "Accuracy for category 'MORTGAGE': 0.9999\n",
+      "Accuracy for category 'PETS': 0.9984\n",
+      "Accuracy for category 'FOOD_AND_BEVERAGES': 0.9271\n",
+      "Accuracy for category 'EDUCATION': 0.9973\n",
+      "Accuracy for category 'GENERAL_MERCHANDISE': 0.9261\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "# Split data into training and testing sets\n",
+    "X_train_text, X_test_text, y_train, y_test = train_test_split(\n",
+    "    w_cleaned_outflows['memo'], \n",
+    "    w_cleaned_outflows['category'], \n",
+    "    test_size=0.2, \n",
+    "    random_state=42\n",
+    ")\n",
     "\n",
-    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_features=500) #unigrams, capped at 500 \n",
+    "# Vectorize the memo field using TF-IDF\n",
+    "vectorizer = TfidfVectorizer(max_features=2000, max_df=0.95, min_df=5)\n",
+    "X_train = vectorizer.fit_transform(X_train_text)\n",
+    "X_test = vectorizer.transform(X_test_text)\n",
+    "print('Vectorization complete')\n",
     "\n",
-    "tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])\n",
+    "# Train a Naive Bayes model\n",
+    "nb_model = MultinomialNB()\n",
+    "nb_model.fit(X_train, y_train)\n",
+    "print('Naive Bayes model trained')\n",
+    "print('-----------------------------------------------------------------')\n",
     "\n",
-    "feature_names = tfidf_vectorizer.get_feature_names_out()\n",
+    "# Make predictions on the test set\n",
+    "y_pred = nb_model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Overall Accuracy:\", accuracy)\n",
+    "print('-----------------------------------------------------------------')\n",
     "\n",
-    "tfidf_df = pd.DataFrame(tfidf_features.toarray(), columns=feature_names)\n",
+    "# Predicted probabilities for ROC AUC\n",
+    "y_prob = nb_model.predict_proba(X_test)\n",
     "\n",
-    "print(\"TF-IDF Matrix shape:\", tfidf_features.shape)\n",
+    "# Binarize y_test for ROC AUC calculation per category\n",
+    "y_test_binarized = label_binarize(y_test, classes=w_cleaned_outflows['category'].unique())\n",
     "\n",
-    "print(tfidf_df)\n"
+    "# Calculate and display ROC AUC for each category\n",
+    "roc_auc_per_class = roc_auc_score(y_test_binarized, y_prob, average=None)\n",
+    "for idx, auc in enumerate(roc_auc_per_class):\n",
+    "    category = w_cleaned_outflows['category'].unique()[idx]\n",
+    "    print(f\"ROC AUC for category '{category}': {auc:.4f}\")\n",
+    "print('-----------------------------------------------------------------')\n",
+    "\n",
+    "# Calculate accuracy for each category in a one-vs-all approach\n",
+    "for category in set(y_test):\n",
+    "    # Convert to binary labels for one-vs-all accuracy calculation\n",
+    "    y_test_binary = (y_test == category).astype(int)\n",
+    "    y_pred_binary = (y_pred == category).astype(int)\n",
+    "    category_accuracy = accuracy_score(y_test_binary, y_pred_binary)\n",
+    "    print(f\"Accuracy for category '{category}': {category_accuracy:.4f}\")\n"
    ]
   }
  ],
