--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -2123,9 +2123,9 @@
     "    print(f\"ROC AUC for category '{category}': {auc:.4f}\")\n",
     "print('-----------------------------------------------------------------')\n",
     "\n",
-    "# Calculate accuracy for each category in a one-vs-all approach\n",
+    "# Calculate accuracy for each category\n",
     "for category in set(y_test):\n",
-    "    # Convert to binary labels for one-vs-all accuracy calculation\n",
+    "    # Convert to binary labels\n",
     "    y_test_binary = (y_test == category).astype(int)\n",
     "    y_pred_binary = (y_pred == category).astype(int)\n",
     "    category_accuracy = accuracy_score(y_test_binary, y_pred_binary)\n",
