--- a/notebooks/baseline_models.ipynb
+++ b/notebooks/baseline_models.ipynb
@@ -742,16 +742,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "08b5a9a3-2380-4196-8b40-4cbf4d28ecb0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fasttext'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfasttext\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, classification_report, confusion_matrix\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fasttext'"
+     ]
+    }
+   ],
+   "source": [
+    "import fasttext\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load your data\n",
+    "# Assuming `w_cleaned_outflows` is your DataFrame with columns 'memo' and 'category'\n",
+    "X_train_text, X_test_text, y_train, y_test = train_test_split(\n",
+    "    w_cleaned_outflows['memo'], \n",
+    "    w_cleaned_outflows['category'], \n",
+    "    test_size=0.2, \n",
+    "    random_state=42\n",
+    ")\n",
+    "print('Data split complete')\n",
+    "\n",
+    "# Save the training data in the format FastText expects (each line: __label__<label> <text>)\n",
+    "train_file = 'train_data.txt'\n",
+    "test_file = 'test_data.txt'\n",
+    "\n",
+    "# Save train data\n",
+    "with open(train_file, 'w') as f:\n",
+    "    for text, label in zip(X_train_text, y_train):\n",
+    "        f.write(f'__label__{label} {text}\\n')\n",
+    "\n",
+    "# Save test data\n",
+    "with open(test_file, 'w') as f:\n",
+    "    for text, label in zip(X_test_text, y_test):\n",
+    "        f.write(f'__label__{label} {text}\\n')\n",
+    "\n",
+    "# Suppress output during training\n",
+    "\n",
+    "# Train a FastText model for text classification\n",
+    "model = fasttext.train_supervised(input=train_file, epoch=25, lr=1.0, wordNgrams=2, bucket=200000, dim=50)\n",
+    "print('FastText model training complete')\n",
+    "\n",
+    "# Predict categories for the test set\n",
+    "y_pred = [model.predict(text)[0][0].replace('__label__', '') for text in X_test_text]\n",
+    "print('FastText categorization complete')\n",
+    "\n",
+    "# Evaluating the predictions\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Generate a classification report\n",
+    "class_report = classification_report(y_test, y_pred, target_names=list(set(y_test)))\n",
+    "print(\"\\nClassification Report:\\n\", class_report)\n",
+    "\n",
+    "# Generate a confusion matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred, labels=list(set(y_test)))\n",
+    "conf_matrix_df = pd.DataFrame(conf_matrix, index=list(set(y_test)), columns=list(set(y_test)))\n",
+    "print(\"\\nConfusion Matrix:\\n\", conf_matrix_df)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -765,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
